--- a/WhatsApp/app/src/main/res/values/strings.xml
+++ b/WhatsApp/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="menu_pesquisar">Pesquisar</string>
     <string name="menu_configuracoes">Configurações</string>
     <string name="menu_sair">Sair</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
